--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -6,3 +6,11 @@ html {
   height: 100vh;
   background-color: $black-color;
 }
+
+.app {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
