--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -5,12 +5,22 @@
   width: 50%;
   border-radius: 20px;
   box-shadow: 0 0 10px $green-color;
+  display: flex;
+  flex-direction: column;
+  
+  .content {
+    width: 100%;
+    display: flex;
+    flex: 1;
+    padding: 0 0 2rem 0;
+  }
 }
 
 #nav {
   display: flex;
   padding: 2% 3%;
-  color: $white-color;
+  color: $blue-color;
   justify-content: space-between;
   font-size: 2rem;
+  font-weight: bold;
 }
